// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      class=\\"MuiGrid-container-3 StandardPage\\"
    >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-2\\"
+     >
+       Claim a work
+     </h2>
      <div
        class=\\"MuiGrid-item-4 Page-layoutCard-1\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-377\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-380\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-381\\"
+                   >
+                     You are claiming to be an author for the following work:
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-383\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
                    >
                      <div
                        class=\\"MuiGrid-container-3\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                         style=\\"min-width: 1px;\\"
+                       >
+                         <h6
+                           class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-385\\"
+                         >
+                           <a
+                             href=\\"/view/UQ:396321\\"
                            >
+                             Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer
+                           </a>
+                         </h6>
+                       </div>
                        <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-386\\"
+                       >
+                         <div
+                           class=\\"citationContent citationJournalArticle\\"
+                         >
+                           <span
+                             class=\\"citationAuthors\\"
+                           >
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Milevskiy, Michael J. G., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Al-Ejeh, Fares
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                                and Saunus, Jodi M.
+                             </span>
+                              
+                           </span>
+                           <span
+                             class=\\"citationDate\\"
+                           >
+                             (2016).
+                           </span>
+                           <span
+                             class=\\"citationTitle\\"
+                           >
+                              Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer.
+                           </span>
+                           <span
+                             class=\\"citationJournalName\\"
+                           >
+                              Human Molecular Genetics 
+                           </span>
+                           <span
+                             class=\\"citationVolumeNumber\\"
+                           >
+                              25 
+                           </span>
+                           <span
+                             class=\\"citationIssueNumber\\"
+                           >
+                             (15) 
+                           </span>
+                           <span
+                             class=\\"citationPageRange\\"
+                           >
+                             <span
+                               class=\\"citationStartPage\\"
+                             >
+                               3269
+                             </span>
+                             -
+                             <span
+                               class=\\"citationEndPage\\"
+                             >
+                               3283
+                             </span>
+                           </span>
+                           <span>
+                             . 
+                           </span>
+                           <a
+                             aria-label=\\"Open this DOI in an new window\\"
+                             class=\\"citationDoiLink ExternalLink-externalLink-391\\"
+                             href=\\"https://doi.org/10.1093/hmg/ddw177\\"
+                             rel=\\"noopener noreferrer\\"
+                             tabindex=\\"0\\"
+                             target=\\"_blank\\"
+                             theme=\\"[object Object]\\"
+                             title=\\"Open this DOI in an new window\\"
+                           >
+                             <svg
+                               aria-hidden=\\"true\\"
+                               class=\\"MuiSvgIcon-root-393 ExternalLink-externalLinkIcon-392\\"
+                               focusable=\\"false\\"
+                               role=\\"presentation\\"
+                               viewBox=\\"0 0 24 24\\"
+                             >
+                               <path
+                                 d=\\"M0 0h24v24H0z\\"
+                                 fill=\\"none\\"
+                               />
+                               <path
+                                 d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                               />
+                             </svg>
+                             https://doi.org/10.1093/hmg/ddw177
+                           </a>
+                         </div>
+                       </div>
+                       <div
                          class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-center-11\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30 PublicationCitation-citationCounts-387\\"
                            >
                              <div
-             style=\\"padding: 8px;\\"
+                               class=\\"MuiGrid-container-3\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                               >
+                                 <a
+                                   aria-label=\\"Full citation in Web of science will open in a new window\\"
+                                   class=\\"wosCitationCount CitationCountView-citationCount-403 ExternalLink-externalLink-391\\"
+                                   href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000393077300011&SrcAuth=uqueensland\\"
+                                   rel=\\"noopener noreferrer\\"
+                                   tabindex=\\"0\\"
+                                   target=\\"_blank\\"
+                                   theme=\\"[object Object]\\"
+                                   title=\\"Full citation in Web of science will open in a new window\\"
+                                 >
+                                   <span
+                                     class=\\"fez-icon wos large\\"
+                                   />
+                                   <span
+                                     class=\\"CitationCountView-citationCountNumber-404\\"
+                                   >
+                                     6
+                                   </span>
+                                 </a>
+                                 <a
+                                   aria-label=\\"Full citation in Scopus will open in a new window\\"
+                                   class=\\"scopusCitationCount CitationCountView-citationCount-403 ExternalLink-externalLink-391\\"
+                                   href=\\"http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=2-s2.0-85014391875&origin=inward\\"
+                                   rel=\\"noopener noreferrer\\"
+                                   tabindex=\\"0\\"
+                                   target=\\"_blank\\"
+                                   theme=\\"[object Object]\\"
+                                   title=\\"Full citation in Scopus will open in a new window\\"
+                                 >
+                                   <span
+                                     class=\\"fez-icon scopus large\\"
+                                   />
+                                   <span
+                                     class=\\"CitationCountView-citationCountNumber-404\\"
+                                   >
+                                     7
+                                   </span>
+                                 </a>
+                                 <a
+                                   aria-label=\\"Full citation in Altmetric will open in a new window\\"
+                                   class=\\"altmetricCitationCount CitationCountView-citationCount-403 ExternalLink-externalLink-391\\"
+                                   href=\\"http://www.altmetric.com/details.php?citation_id=9271343\\"
+                                   rel=\\"noopener noreferrer\\"
+                                   tabindex=\\"0\\"
+                                   target=\\"_blank\\"
+                                   theme=\\"[object Object]\\"
+                                   title=\\"Full citation in Altmetric will open in a new window\\"
+                                 >
+                                   <span
+                                     class=\\"fez-icon altmetric large\\"
+                                   />
+                                   <span
+                                     class=\\"CitationCountView-citationCountNumber-404\\"
+                                   >
+                                     2
+                                   </span>
+                                 </a>
+                                 <a
+                                   aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                                   class=\\"googleCitationCount CitationCountView-citationCount-403 ExternalLink-externalLink-391\\"
+                                   href=\\"https://scholar.google.com/scholar?q=intitle:Long-range%20regulators%20of%20the%20lncRNA%20HOTAIR%20enhance%20its%20prognostic%20potential%20in%20breast%20cancer\\"
+                                   rel=\\"noopener noreferrer\\"
+                                   tabindex=\\"0\\"
+                                   target=\\"_blank\\"
+                                   theme=\\"[object Object]\\"
+                                   title=\\"Full citation in Google scholar will open in a new window\\"
+                                 >
+                                   <span
+                                     class=\\"fez-icon google large\\"
+                                   />
+                                 </a>
+                                 <span
+                                   class=\\"noOaIcon\\"
+                                 />
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <a
+                                   class=\\"CitationCounts-statsLink-402 ExternalLink-externalLink-391\\"
+                                   href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:396321\\"
+                                   rel=\\"noopener noreferrer\\"
+                                   tabindex=\\"0\\"
+                                   target=\\"_blank\\"
+                                   theme=\\"[object Object]\\"
+                                   title=\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer\\"
+                                 >
+                                   <svg
+                                     aria-hidden=\\"true\\"
+                                     class=\\"MuiSvgIcon-root-393 ExternalLink-externalLinkIcon-392\\"
+                                     focusable=\\"false\\"
+                                     role=\\"presentation\\"
+                                     viewBox=\\"0 0 24 24\\"
+                                   >
+                                     <path
+                                       d=\\"M0 0h24v24H0z\\"
+                                       fill=\\"none\\"
+                                     />
+                                     <path
+                                       d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                     />
+                                   </svg>
+                                   View full statistics
+                                 </a>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                               />
+                             </div>
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <hr
+                   class=\\"MuiDivider-root-405 PublicationCitation-divider-384\\"
+                 />
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                 >
+                   <span
+                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                   >
+                     <span
+                       class=\\"PublicationCitation-contentIndicatorTitle-389\\"
+                     >
+                       Content Indicators:
+                     </span>
+                     Scholarship of Teaching and Learning, Protocol
+                   </span>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <span />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-377\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-380\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-381\\"
+                   >
+                     Author linking
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-383\\"
+               >
+                 <label
+                   for=\\"authorLinking\\"
+                 >
+                   We were unable to automatically detect who you are from the list of authors on this work. Please select your name from the list below: 
+                 </label>
+                 <div
+                   class=\\"requiredField\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 WithTheme-WithWidth-AuthorLinking---infiniteContainer-426\\"
+                     >
+                       <div
+                         class=\\"\\"
+                         style=\\"height: 200px; overflow-x: hidden; overflow-y: scroll;\\"
+                       >
+                         <div>
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                           <div
+                             class=\\"MuiGrid-container-3\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-446 MuiButtonBase-disabled-447 MuiButton-root-516 MuiButton-text-518 MuiButton-flat-521 MuiButton-disabled-536 MuiButton-fullWidth-541 AuthorItem-buttonBase-543\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-517\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-393 AuthorItem-authorLinkIcon-542\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Milevskiy, Michael J. G.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
                                  >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-544\\"
+                                   >
+                                     First  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
                              <div
-               class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
                              >
                                <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                                 class=\\"MuiGrid-container-3\\"
                                >
                                  <div
-                   class=\\"MuiCircularProgress-root-334 MuiCircularProgress-colorPrimary-337 MuiCircularProgress-indeterminate-336\\"
-                   role=\\"progressbar\\"
-                   style=\\"width: 18px; height: 18px;\\"
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-446 MuiButton-root-516 MuiButton-text-518 MuiButton-flat-521 MuiButton-fullWidth-541 AuthorItem-buttonBase-543\\"
+                                     tabindex=\\"0\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-517\\"
                                      >
                                        <svg
-                     class=\\"MuiCircularProgress-svg-339\\"
-                     viewBox=\\"22 22 44 44\\"
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-393 MuiSvgIcon-colorSecondary-395 AuthorItem-authorLinkIcon-542\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                         />
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                       </svg>
+                                       Al-Ejeh, Fares
+                                     </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-545\\"
+                                     />
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-544\\"
+                                   >
+                                     Second  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-446 MuiButtonBase-disabled-447 MuiButton-root-516 MuiButton-text-518 MuiButton-flat-521 MuiButton-disabled-536 MuiButton-fullWidth-541 AuthorItem-buttonBase-543\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-517\\"
                                      >
-                     <circle
-                       class=\\"MuiCircularProgress-circle-340 MuiCircularProgress-circleIndeterminate-342\\"
-                       cx=\\"44\\"
-                       cy=\\"44\\"
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-393 AuthorItem-authorLinkIcon-542\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
-                       r=\\"21\\"
-                       stroke-width=\\"2\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
                                          />
                                        </svg>
+                                       Saunus, Jodi M.
+                                     </span>
+                                   </button>
                                  </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-544\\"
+                                   >
+                                     Third  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
                            </div>
+                           <div>
+                             <div />
+                           </div>
                            <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-377\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-380\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-381\\"
+                   >
+                     Optional: Content Indicators
+                   </h3>
+                 </div>
+                 <div
+                   class=\\"MuiCardHeader-action-379\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-446 MuiIconButton-root-440\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-445\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-393 HelpIcon-helpIcon-431\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
+                       </svg>
+                     </span>
                      <span
-                   class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-                   style=\\"font-size: 1.33rem;\\"
+                       class=\\"MuiTouchRipple-root-545\\"
+                     />
+                   </button>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-383\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <p
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-450 MuiFormControl-fullWidth-453\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-465 MuiFormLabel-filled-469 MuiInputLabel-root-454 MuiInputLabel-formControl-459 MuiInputLabel-animated-462 MuiInputLabel-shrink-461\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-492 MuiInput-root-479 MuiInput-underline-483 MuiInputBase-formControl-493 MuiInput-formControl-480\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-472\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-473 MuiSelect-selectMenu-476 MuiInputBase-input-502 MuiInput-input-487\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-393 MuiSelect-icon-478\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-377\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-380\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-381\\"
+                   >
+                     Optional: Suggest changes or add links to this work
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-383\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-450 MuiFormControl-fullWidth-453\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-465 MuiInputLabel-root-454 MuiInputLabel-formControl-459 MuiInputLabel-animated-462\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Typeedits/changes/commentshere\\"
+                         id=\\"Typeedits/changes/commentshere-label\\"
+                       >
+                         Type edits/changes/comments here
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-492 MuiInput-root-479 MuiInput-underline-483 MuiInputBase-fullWidth-501 MuiInput-fullWidth-486 MuiInputBase-formControl-493 MuiInput-formControl-480 MuiInputBase-multiline-500 MuiInput-multiline-485\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Type edits/changes/comments here\\"
+                           aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
+                           class=\\"MuiInputBase-input-502 MuiInput-input-487 MuiInputBase-inputMultiline-504 MuiInput-inputMultiline-489\\"
+                           id=\\"Typeedits/changes/commentshere\\"
+                           label=\\"Type edits/changes/comments here\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-450 MuiFormControl-fullWidth-453\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-465 MuiInputLabel-root-454 MuiInputLabel-formControl-459 MuiInputLabel-animated-462\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-492 MuiInput-root-479 MuiInput-underline-483 MuiInputBase-fullWidth-501 MuiInput-fullWidth-486 MuiInputBase-formControl-493 MuiInput-formControl-480\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-502 MuiInput-input-487\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-377\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-380\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-381\\"
+                   >
+                     Optional: Upload additional files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-383\\"
+               >
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-512\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-513\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files. Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-514\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-393 FileUploadDropzoneStaticContent-cloudIcon-515\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           aria-label=\\"Upload files\\"
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
-                   Loading record to claim
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-560 Alert-common-552\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-553 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-393 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-554 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             You are required to select a author from the list, then confirm that it is you
+                           </li>
+                         </ul>
                        </span>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-446 MuiButton-root-516 MuiButton-contained-527 MuiButton-raised-530 MuiButton-fullWidth-541\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-517\\"
+               >
+                 Cancel this claim
+               </span>
+               <span
+                 class=\\"MuiTouchRipple-root-545\\"
+               />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-446 MuiButtonBase-disabled-447 MuiButton-root-516 MuiButton-contained-527 MuiButton-containedPrimary-528 MuiButton-raised-530 MuiButton-raisedPrimary-531 MuiButton-disabled-536 MuiButton-fullWidth-541\\"
+               disabled=\\"\\"
+               id=\\"claimSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-517\\"
+               >
+                 Claim this work
+               </span>
+             </button>
+           </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`ClaimRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -605,11 +605,12 @@
                          <div
                            class=\\"MuiSelect-root-472\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-473 MuiSelect-selectMenu-476 MuiInputBase-input-502 MuiInput-input-487\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`ClaimRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -305,11 +305,11 @@
                    </span>
                  </div>
                </div>
              </div>
            </div>
-           <span />
+           <div />
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"MuiPaper-root-350 MuiPaper-elevation1-353 MuiPaper-rounded-351 MuiCard-root-349 Cards-card-344 StandardCard\\"
@@ -612,16 +612,16 @@
                              class=\\"MuiSelect-select-473 MuiSelect-selectMenu-476 MuiInputBase-input-502 MuiInput-input-487\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-393 MuiSelect-icon-478\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -612,16 +612,16 @@
                              class=\\"MuiSelect-select-473 MuiSelect-selectMenu-476 MuiInputBase-input-502 MuiInput-input-487\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-393 MuiSelect-icon-478\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -420,17 +420,17 @@
                                      <span
                                        class=\\"MuiButton-label-1103\\"
                                      >
                                        <svg
                                          aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-979 MuiSvgIcon-colorSecondary-981 AuthorItem-authorLinkIcon-1128\\"
+                                         class=\\"MuiSvgIcon-root-979 MuiSvgIcon-colorPrimary-980 AuthorItem-authorLinkIcon-1128\\"
                                          focusable=\\"false\\"
                                          role=\\"presentation\\"
                                          viewBox=\\"0 0 24 24\\"
                                        >
                                          <path
-                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                           d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
                                          />
                                          <path
                                            d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
                                          />
@@ -500,20 +500,60 @@
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
-                           <div>
                            <div />
-                           </div>
                            <div
                              style=\\"width: 100%; height: 0px;\\"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
+                   <label
+                     class=\\"MuiFormControlLabel-root-1173 WithTheme-WithWidth-AuthorLinking---root-1013\\"
+                   >
+                     <span
+                       class=\\"MuiButtonBase-root-1032 MuiIconButton-root-1026 MuiPrivateSwitchBase-root-1185 MuiCheckbox-root-1179 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1015 MuiCheckbox-colorSecondary-1184 MuiPrivateSwitchBase-checked-1186 MuiCheckbox-checked-1180 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1016\\"
+                     >
+                       <span
+                         class=\\"MuiIconButton-label-1031\\"
+                       >
+                         <svg
+                           aria-hidden=\\"true\\"
+                           class=\\"MuiSvgIcon-root-979\\"
+                           focusable=\\"false\\"
+                           role=\\"presentation\\"
+                           viewBox=\\"0 0 24 24\\"
+                         >
+                           <path
+                             d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"
+                           />
+                         </svg>
+                         <input
+                           class=\\"MuiPrivateSwitchBase-input-1188\\"
+                           data-indeterminate=\\"false\\"
+                           id=\\"authorAcceptDeclaration\\"
+                           type=\\"checkbox\\"
+                           value=\\"\\"
+                         />
+                       </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1131\\"
+                       />
+                     </span>
+                     <span
+                       class=\\"MuiTypography-root-686 MuiTypography-body2-694 MuiFormControlLabel-label-1178\\"
+                     >
+                       <p
+                         class=\\"MuiTypography-root-686 WithTheme-WithWidth-AuthorLinking---label-1014 MuiTypography-body2-694 MuiTypography-colorSecondary-717\\"
+                       >
+                         I confirm and understand that I am claiming this work under the above name, and confirm this is me
+                       </p>
+                     </span>
+                   </label>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -851,67 +891,12 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606 Alert-warning-1146 Alert-common-1138\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629 MuiGrid-grid-sm-true-631\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-589 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-590 Alert-icon-1139 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-979 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
          </div>
          <div
-                       class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617 Alert-text-1140 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             You are required to select a author from the list, then confirm that it is you
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
            class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613\\"
          >
            <div
              class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617\\"
            />
@@ -935,21 +920,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-590\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-disabled-1122 MuiButton-fullWidth-1127\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-fullWidth-1127\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1103\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1131\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -411,12 +411,13 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-text-1104 MuiButton-flat-1107 MuiButton-fullWidth-1127 AuthorItem-buttonBase-1129\\"
-                                     tabindex=\\"0\\"
+                                     class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-text-1104 MuiButton-flat-1107 MuiButton-disabled-1122 MuiButton-fullWidth-1127 AuthorItem-buttonBase-1129\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1103\\"
                                      >
@@ -435,13 +436,10 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
-                                     <span
-                                       class=\\"MuiTouchRipple-root-1131\\"
-                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
                                  >
@@ -509,14 +507,15 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1173 WithTheme-WithWidth-AuthorLinking---root-1013\\"
+                     class=\\"MuiFormControlLabel-root-1173 WithTheme-WithWidth-AuthorLinking---root-1013 MuiFormControlLabel-disabled-1177\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1032 MuiIconButton-root-1026 MuiPrivateSwitchBase-root-1185 MuiCheckbox-root-1179 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1015 MuiCheckbox-colorSecondary-1184 MuiPrivateSwitchBase-checked-1186 MuiCheckbox-checked-1180 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1016\\"
+                       class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiIconButton-root-1026 MuiIconButton-disabled-1030 MuiPrivateSwitchBase-root-1185 MuiCheckbox-root-1179 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1015 MuiCheckbox-colorSecondary-1184 MuiPrivateSwitchBase-checked-1186 MuiCheckbox-checked-1180 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1016 MuiPrivateSwitchBase-disabled-1187 MuiCheckbox-disabled-1181\\"
+                       tabindex=\\"-1\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1031\\"
                        >
                          <svg
@@ -531,21 +530,19 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiPrivateSwitchBase-input-1188\\"
                            data-indeterminate=\\"false\\"
+                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
-                       <span
-                         class=\\"MuiTouchRipple-root-1131\\"
-                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-686 MuiTypography-body2-694 MuiFormControlLabel-label-1178\\"
+                       class=\\"MuiTypography-root-686 MuiTypography-body2-694 MuiFormControlLabel-label-1178 MuiFormControlLabel-disabled-1177\\"
                      >
                        <p
                          class=\\"MuiTypography-root-686 WithTheme-WithWidth-AuthorLinking---label-1014 MuiTypography-body2-694 MuiTypography-colorSecondary-717\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -638,23 +635,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1058\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1059 MuiSelect-selectMenu-1062 MuiInputBase-input-1088 MuiInput-input-1073\\"
+                             class=\\"MuiSelect-select-1059 MuiSelect-selectMenu-1062 MuiSelect-disabled-1063 MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -710,25 +706,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1036 MuiFormControl-fullWidth-1039\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1051 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
+                         class=\\"MuiFormLabel-root-1051 MuiFormLabel-disabled-1053 MuiInputLabel-disabled-1042 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066 MuiInputBase-multiline-1086 MuiInput-multiline-1071\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066 MuiInputBase-multiline-1086 MuiInput-multiline-1071\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-inputMultiline-1090 MuiInput-inputMultiline-1075\\"
+                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-inputMultiline-1090 MuiInput-inputMultiline-1075\\"
+                           disabled=\\"\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -740,25 +737,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1036 MuiFormControl-fullWidth-1039\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1051 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
+                         class=\\"MuiFormLabel-root-1051 MuiFormLabel-disabled-1053 MuiInputLabel-disabled-1042 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073\\"
+                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -805,11 +803,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-589 FileUploadDropzoneStaticContent-dropzone-1098\\"
@@ -879,10 +877,11 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -891,52 +890,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606 Alert-info_outline-1201 Alert-common-1189\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629 MuiGrid-grid-sm-true-631\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-589 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-590 Alert-icon-1190 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1203 MuiCircularProgress-colorPrimary-1206 MuiCircularProgress-indeterminate-1205 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1208\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1209 MuiCircularProgress-circleIndeterminate-1211\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617 Alert-text-1191 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Claim publication is being processed.
+                     </div>
+                   </div>
                  </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
            class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613\\"
          >
            <div
              class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617\\"
            />
            <div
              class=\\"MuiGrid-item-590\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-raised-1116 MuiButton-fullWidth-1127\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-raised-1116 MuiButton-disabled-1122 MuiButton-fullWidth-1127\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1103\\"
                >
                  Cancel this claim
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1131\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-590\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-fullWidth-1127\\"
+               class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-disabled-1122 MuiButton-fullWidth-1127\\"
+               disabled=\\"\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1103\\"
                >
                  Claim this work
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1131\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -305,11 +305,11 @@
                    </span>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
            >
              <div
                class=\\"MuiPaper-root-936 MuiPaper-elevation1-939 MuiPaper-rounded-937 MuiCard-root-935 Cards-card-930 StandardCard\\"
@@ -411,13 +411,12 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-text-1104 MuiButton-flat-1107 MuiButton-disabled-1122 MuiButton-fullWidth-1127 AuthorItem-buttonBase-1129\\"
-                                     disabled=\\"\\"
-                                     tabindex=\\"-1\\"
+                                     class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-text-1104 MuiButton-flat-1107 MuiButton-fullWidth-1127 AuthorItem-buttonBase-1129\\"
+                                     tabindex=\\"0\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1103\\"
                                      >
@@ -436,10 +435,13 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-1131\\"
+                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629\\"
                                  >
@@ -507,15 +509,14 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1173 WithTheme-WithWidth-AuthorLinking---root-1013 MuiFormControlLabel-disabled-1177\\"
+                     class=\\"MuiFormControlLabel-root-1173 WithTheme-WithWidth-AuthorLinking---root-1013\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiIconButton-root-1026 MuiIconButton-disabled-1030 MuiPrivateSwitchBase-root-1185 MuiCheckbox-root-1179 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1015 MuiCheckbox-colorSecondary-1184 MuiPrivateSwitchBase-checked-1186 MuiCheckbox-checked-1180 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1016 MuiPrivateSwitchBase-disabled-1187 MuiCheckbox-disabled-1181\\"
-                       tabindex=\\"-1\\"
+                       class=\\"MuiButtonBase-root-1032 MuiIconButton-root-1026 MuiPrivateSwitchBase-root-1185 MuiCheckbox-root-1179 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1015 MuiCheckbox-colorSecondary-1184 MuiPrivateSwitchBase-checked-1186 MuiCheckbox-checked-1180 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1016\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1031\\"
                        >
                          <svg
@@ -530,19 +531,21 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiPrivateSwitchBase-input-1188\\"
                            data-indeterminate=\\"false\\"
-                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1131\\"
+                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-686 MuiTypography-body2-694 MuiFormControlLabel-label-1178 MuiFormControlLabel-disabled-1177\\"
+                       class=\\"MuiTypography-root-686 MuiTypography-body2-694 MuiFormControlLabel-label-1178\\"
                      >
                        <p
                          class=\\"MuiTypography-root-686 WithTheme-WithWidth-AuthorLinking---label-1014 MuiTypography-body2-694 MuiTypography-colorSecondary-717\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -635,22 +638,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1058\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1059 MuiSelect-selectMenu-1062 MuiSelect-disabled-1063 MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068\\"
+                             class=\\"MuiSelect-select-1059 MuiSelect-selectMenu-1062 MuiInputBase-input-1088 MuiInput-input-1073\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -706,26 +710,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1036 MuiFormControl-fullWidth-1039\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1051 MuiFormLabel-disabled-1053 MuiInputLabel-disabled-1042 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
+                         class=\\"MuiFormLabel-root-1051 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066 MuiInputBase-multiline-1086 MuiInput-multiline-1071\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066 MuiInputBase-multiline-1086 MuiInput-multiline-1071\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-inputMultiline-1090 MuiInput-inputMultiline-1075\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-inputMultiline-1090 MuiInput-inputMultiline-1075\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -737,26 +740,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1036 MuiFormControl-fullWidth-1039\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1051 MuiFormLabel-disabled-1053 MuiInputLabel-disabled-1042 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
+                         class=\\"MuiFormLabel-root-1051 MuiInputLabel-root-1040 MuiInputLabel-formControl-1045 MuiInputLabel-animated-1048\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-disabled-1081 MuiInput-disabled-1068 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
+                         class=\\"MuiInputBase-root-1078 MuiInput-root-1065 MuiInput-underline-1069 MuiInputBase-fullWidth-1087 MuiInput-fullWidth-1072 MuiInputBase-formControl-1079 MuiInput-formControl-1066\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073 MuiInputBase-disabled-1081 MuiInput-disabled-1068\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1088 MuiInput-input-1073\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -803,11 +805,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-589 FileUploadDropzoneStaticContent-dropzone-1098\\"
@@ -877,11 +879,10 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -898,48 +899,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606 Alert-info_outline-1201 Alert-common-1189\\"
+                 class=\\"MuiGrid-container-589 MuiGrid-spacing-xs-24-613 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606 Alert-done-1226 Alert-common-1213\\"
                >
                  <div
                    class=\\"MuiGrid-item-590 MuiGrid-grid-xs-12-629 MuiGrid-grid-sm-true-631\\"
                  >
                    <div
                      class=\\"MuiGrid-container-589 MuiGrid-align-items-xs-flex-start-598 MuiGrid-align-content-xs-center-601 MuiGrid-justify-xs-center-606\\"
                    >
                      <div
-                       class=\\"MuiGrid-item-590 Alert-icon-1190 alert-icon\\"
+                       class=\\"MuiGrid-item-590 Alert-icon-1214 alert-icon\\"
                      >
-                       <div
-                         class=\\"MuiCircularProgress-root-1203 MuiCircularProgress-colorPrimary-1206 MuiCircularProgress-indeterminate-1205 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
-                       >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1208\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-979 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1209 MuiCircularProgress-circleIndeterminate-1211\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
+                         />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
                          />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617 Alert-text-1191 alert-text\\"
+                       class=\\"MuiGrid-item-590 MuiGrid-grid-xs-true-617 Alert-text-1215 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Claim publication is being processed.
+                       Publication claim has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -953,37 +950,41 @@
            />
            <div
              class=\\"MuiGrid-item-590\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-raised-1116 MuiButton-disabled-1122 MuiButton-fullWidth-1127\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-raised-1116 MuiButton-fullWidth-1127\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1103\\"
                >
                  Cancel this claim
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1131\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-590\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1032 MuiButtonBase-disabled-1033 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-disabled-1122 MuiButton-fullWidth-1127\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1032 MuiButton-root-1102 MuiButton-contained-1113 MuiButton-containedPrimary-1114 MuiButton-raised-1116 MuiButton-raisedPrimary-1117 MuiButton-fullWidth-1127\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1103\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1131\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
